-- =============================================
-- Taxi-brousse (Madagascar) - Schema Postgres 
-- =============================================

SET client_encoding = 'UTF8';

BEGIN;

-- ---------- Nettoyage ----------
DROP TABLE IF EXISTS depense_vehicule CASCADE;
DROP TABLE IF EXISTS billet CASCADE;
DROP TABLE IF EXISTS paiement_reservation CASCADE;
DROP TABLE IF EXISTS paiement CASCADE;
DROP TABLE IF EXISTS reservation_passager CASCADE;
DROP TABLE IF EXISTS reservation CASCADE;
DROP TABLE IF EXISTS depart CASCADE;
DROP TABLE IF EXISTS tarif CASCADE;
DROP TABLE IF EXISTS chauffeur_vehicule CASCADE;
DROP TABLE IF EXISTS cooperative_vehicule CASCADE;
DROP TABLE IF EXISTS cooperative_trajet CASCADE;
DROP TABLE IF EXISTS vehicule CASCADE;
DROP TABLE IF EXISTS chauffeur CASCADE;
DROP TABLE IF EXISTS client CASCADE;
DROP TABLE IF EXISTS trajet_escale CASCADE;
DROP TABLE IF EXISTS trajet CASCADE;
DROP TABLE IF EXISTS cooperative CASCADE;
DROP TABLE IF EXISTS lieu CASCADE;

DROP TABLE IF EXISTS ref_type_depense CASCADE;
DROP TABLE IF EXISTS ref_siege_categorie CASCADE;
DROP TABLE IF EXISTS ref_chauffeur_vehicule_role CASCADE;
DROP TABLE IF EXISTS ref_billet_statut CASCADE;
DROP TABLE IF EXISTS ref_passager_categorie CASCADE;
DROP TABLE IF EXISTS depart_tarif_remise CASCADE;

DROP TABLE IF EXISTS ref_paiement_statut CASCADE;
DROP TABLE IF EXISTS ref_paiement_methode CASCADE;
DROP TABLE IF EXISTS ref_reservation_statut CASCADE;
DROP TABLE IF EXISTS ref_depart_statut CASCADE;
DROP TABLE IF EXISTS ref_vehicule_etat CASCADE;
DROP TABLE IF EXISTS ref_vehicule_type CASCADE;
DROP TABLE IF EXISTS ref_lieu_type CASCADE;
DROP TABLE IF EXISTS ref_devise CASCADE;

-- ---------- Tables de reference (pas d'enums inline) ----------
CREATE TABLE ref_devise (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code VARCHAR(10) NOT NULL UNIQUE,
    libelle VARCHAR(50) NOT NULL,
    actif BOOLEAN NOT NULL DEFAULT TRUE
);

CREATE TABLE ref_lieu_type (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code VARCHAR(30) NOT NULL UNIQUE,
    libelle VARCHAR(80) NOT NULL,
    actif BOOLEAN NOT NULL DEFAULT TRUE
);

CREATE TABLE ref_vehicule_type (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code VARCHAR(30) NOT NULL UNIQUE,
    libelle VARCHAR(80) NOT NULL,
    description TEXT,
    actif BOOLEAN NOT NULL DEFAULT TRUE
);

CREATE TABLE ref_vehicule_etat (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code VARCHAR(30) NOT NULL UNIQUE,
    libelle VARCHAR(80) NOT NULL,
    actif BOOLEAN NOT NULL DEFAULT TRUE
);

CREATE TABLE ref_depart_statut (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code VARCHAR(30) NOT NULL UNIQUE,
    libelle VARCHAR(80) NOT NULL,
    actif BOOLEAN NOT NULL DEFAULT TRUE
);

CREATE TABLE ref_reservation_statut (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code VARCHAR(30) NOT NULL UNIQUE,
    libelle VARCHAR(80) NOT NULL,
    actif BOOLEAN NOT NULL DEFAULT TRUE
);

CREATE TABLE ref_paiement_methode (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code VARCHAR(30) NOT NULL UNIQUE,
    libelle VARCHAR(80) NOT NULL,
    actif BOOLEAN NOT NULL DEFAULT TRUE
);

CREATE TABLE ref_paiement_statut (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code VARCHAR(30) NOT NULL UNIQUE,
    libelle VARCHAR(80) NOT NULL,
    actif BOOLEAN NOT NULL DEFAULT TRUE
);

CREATE TABLE ref_billet_statut (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code VARCHAR(30) NOT NULL UNIQUE,
    libelle VARCHAR(80) NOT NULL,
    actif BOOLEAN NOT NULL DEFAULT TRUE
);

CREATE TABLE ref_chauffeur_vehicule_role (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code VARCHAR(30) NOT NULL UNIQUE,
    libelle VARCHAR(80) NOT NULL,
    actif BOOLEAN NOT NULL DEFAULT TRUE
);

CREATE TABLE ref_type_depense (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code VARCHAR(30) NOT NULL UNIQUE,
    libelle VARCHAR(80) NOT NULL,
    actif BOOLEAN NOT NULL DEFAULT TRUE
);

CREATE TABLE ref_siege_categorie (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code VARCHAR(30) NOT NULL UNIQUE,
    libelle VARCHAR(80) NOT NULL,
    ordre INTEGER NOT NULL DEFAULT 1,
    actif BOOLEAN NOT NULL DEFAULT TRUE
);

CREATE TABLE ref_passager_categorie (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code VARCHAR(30) NOT NULL UNIQUE,
    libelle VARCHAR(80) NOT NULL,
    ordre INTEGER NOT NULL DEFAULT 1,
    actif BOOLEAN NOT NULL DEFAULT TRUE
);





-- ---------- Entites principales ----------
CREATE TABLE lieu (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nom VARCHAR(150) NOT NULL,
    description TEXT,
    latitude DECIMAL(9,6),
    longitude DECIMAL(9,6),
    ref_lieu_type_id BIGINT,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_lieu_type FOREIGN KEY (ref_lieu_type_id) REFERENCES ref_lieu_type(id)
);

CREATE TABLE cooperative (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code VARCHAR(50) NOT NULL UNIQUE,
    nom VARCHAR(150) NOT NULL,
    telephone VARCHAR(30),
    email VARCHAR(120),
    adresse TEXT,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE trajet (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code VARCHAR(80) NOT NULL UNIQUE,
    libelle VARCHAR(200) NOT NULL,
    lieu_depart_id BIGINT,
    lieu_arrivee_id BIGINT,
    distance_km NUMERIC(10,2) CHECK (distance_km IS NULL OR distance_km >= 0),
    duree_estimee_min INTEGER CHECK (duree_estimee_min IS NULL OR duree_estimee_min >= 0),
    actif BOOLEAN NOT NULL DEFAULT TRUE,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_trajet_depart FOREIGN KEY (lieu_depart_id) REFERENCES lieu(id),
    CONSTRAINT fk_trajet_arrivee FOREIGN KEY (lieu_arrivee_id) REFERENCES lieu(id)
);

CREATE TABLE trajet_escale (
    trajet_id BIGINT NOT NULL,
    lieu_id BIGINT NOT NULL,
    ordre INTEGER NOT NULL CHECK (ordre > 0),
    duree_arret_min INTEGER CHECK (duree_arret_min IS NULL OR duree_arret_min >= 0),
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    PRIMARY KEY (trajet_id, ordre),
    CONSTRAINT uq_trajet_escale_lieu UNIQUE (trajet_id, lieu_id),
    CONSTRAINT fk_trajet_escale_trajet FOREIGN KEY (trajet_id) REFERENCES trajet(id) ON DELETE CASCADE,
    CONSTRAINT fk_trajet_escale_lieu FOREIGN KEY (lieu_id) REFERENCES lieu(id)
);

CREATE TABLE vehicule (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    immatriculation VARCHAR(30) NOT NULL UNIQUE,
    marque VARCHAR(80),
    modele VARCHAR(80),
    annee INTEGER CHECK (annee IS NULL OR annee >= 1950),
    nombre_places INTEGER NOT NULL CHECK (nombre_places > 0),
    ref_vehicule_type_id BIGINT,
    ref_vehicule_etat_id BIGINT,
    date_mise_en_service DATE,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_vehicule_type FOREIGN KEY (ref_vehicule_type_id) REFERENCES ref_vehicule_type(id),
    CONSTRAINT fk_vehicule_etat FOREIGN KEY (ref_vehicule_etat_id) REFERENCES ref_vehicule_etat(id)
);

CREATE TABLE vehicule_siege_config (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    vehicule_id BIGINT NOT NULL,
    ref_siege_categorie_id BIGINT NOT NULL,
    nb_places INTEGER NOT NULL CHECK (nb_places >= 0),
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_vsc_vehicule FOREIGN KEY (vehicule_id) REFERENCES vehicule(id) ON DELETE CASCADE,
    CONSTRAINT fk_vsc_categorie FOREIGN KEY (ref_siege_categorie_id) REFERENCES ref_siege_categorie(id),
    CONSTRAINT uq_vsc UNIQUE (vehicule_id, ref_siege_categorie_id)
);

CREATE TABLE chauffeur (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nom VARCHAR(100) NOT NULL,
    prenom VARCHAR(100),
    telephone VARCHAR(30),
    numero_permis VARCHAR(60) NOT NULL UNIQUE,
    date_naissance DATE,
    date_embauche DATE,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE client (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nom VARCHAR(120) NOT NULL,
    prenom VARCHAR(120),
    telephone VARCHAR(30),
    email VARCHAR(120),
    numero_cin VARCHAR(50),
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
);

-- ---------- Liaisons structurelles ----------
CREATE TABLE cooperative_trajet (
    cooperative_id BIGINT NOT NULL,
    trajet_id BIGINT NOT NULL,
    actif BOOLEAN NOT NULL DEFAULT TRUE,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    PRIMARY KEY (cooperative_id, trajet_id),
    CONSTRAINT fk_coop_trajet_coop FOREIGN KEY (cooperative_id) REFERENCES cooperative(id) ON DELETE CASCADE,
    CONSTRAINT fk_coop_trajet_trajet FOREIGN KEY (trajet_id) REFERENCES trajet(id) ON DELETE CASCADE
);

CREATE TABLE cooperative_vehicule (
    cooperative_id BIGINT NOT NULL,
    vehicule_id BIGINT NOT NULL,
    date_debut DATE NOT NULL DEFAULT CURRENT_DATE,
    date_fin DATE,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    PRIMARY KEY (cooperative_id, vehicule_id, date_debut),
    CONSTRAINT fk_coop_vehicule_coop FOREIGN KEY (cooperative_id) REFERENCES cooperative(id) ON DELETE CASCADE,
    CONSTRAINT fk_coop_vehicule_vehicule FOREIGN KEY (vehicule_id) REFERENCES vehicule(id) ON DELETE CASCADE,
    CONSTRAINT ck_coop_vehicule_dates CHECK (date_fin IS NULL OR date_fin >= date_debut)
);

CREATE TABLE chauffeur_vehicule (
    chauffeur_id BIGINT NOT NULL,
    vehicule_id BIGINT NOT NULL,
    ref_chauffeur_vehicule_role_id BIGINT NOT NULL,
    date_debut TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    date_fin TIMESTAMP,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    PRIMARY KEY (chauffeur_id, vehicule_id, date_debut),
    CONSTRAINT fk_chauffeur_vehicule_chauffeur FOREIGN KEY (chauffeur_id) REFERENCES chauffeur(id) ON DELETE CASCADE,
    CONSTRAINT fk_chauffeur_vehicule_vehicule FOREIGN KEY (vehicule_id) REFERENCES vehicule(id) ON DELETE CASCADE,
    CONSTRAINT fk_chauffeur_vehicule_role FOREIGN KEY (ref_chauffeur_vehicule_role_id) REFERENCES ref_chauffeur_vehicule_role(id),
    CONSTRAINT ck_chauffeur_vehicule_dates CHECK (date_fin IS NULL OR date_fin >= date_debut)
);

-- ---------- Depenses vehicule ----------
CREATE TABLE depense_vehicule (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    vehicule_id BIGINT NOT NULL,
    cooperative_id BIGINT NOT NULL,
    ref_type_depense_id BIGINT NOT NULL,
    ref_devise_id BIGINT NOT NULL,
    montant NUMERIC(12,2) NOT NULL CHECK (montant > 0),
    date_depense DATE NOT NULL DEFAULT CURRENT_DATE,
    description TEXT,
    numero_piece VARCHAR(100),
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_depense_vehicule FOREIGN KEY (vehicule_id) REFERENCES vehicule(id) ON DELETE CASCADE,
    CONSTRAINT fk_depense_cooperative FOREIGN KEY (cooperative_id) REFERENCES cooperative(id) ON DELETE CASCADE,
    CONSTRAINT fk_depense_type FOREIGN KEY (ref_type_depense_id) REFERENCES ref_type_depense(id),
    CONSTRAINT fk_depense_devise FOREIGN KEY (ref_devise_id) REFERENCES ref_devise(id)
);

-- ---------- Tarification simplifiee ----------
CREATE TABLE tarif (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    cooperative_id BIGINT NOT NULL,
    trajet_id BIGINT NOT NULL,
    ref_vehicule_type_id BIGINT NOT NULL,
    ref_devise_id BIGINT NOT NULL,
    montant NUMERIC(12,2) NOT NULL CHECK (montant > 0),
    date_debut DATE NOT NULL DEFAULT CURRENT_DATE,
    date_fin DATE,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_tarif_coop FOREIGN KEY (cooperative_id) REFERENCES cooperative(id) ON DELETE CASCADE,
    CONSTRAINT fk_tarif_trajet FOREIGN KEY (trajet_id) REFERENCES trajet(id) ON DELETE CASCADE,
    CONSTRAINT fk_tarif_veh_type FOREIGN KEY (ref_vehicule_type_id) REFERENCES ref_vehicule_type(id),
    CONSTRAINT fk_tarif_devise FOREIGN KEY (ref_devise_id) REFERENCES ref_devise(id),
    CONSTRAINT ck_tarif_dates CHECK (date_fin IS NULL OR date_fin >= date_debut),
    CONSTRAINT uq_tarif UNIQUE (cooperative_id, trajet_id, ref_vehicule_type_id, ref_devise_id, date_debut)
);

-- ---------- Planification des departs ----------
CREATE TABLE depart (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code VARCHAR(80) NOT NULL UNIQUE,
    cooperative_id BIGINT NOT NULL,
    trajet_id BIGINT NOT NULL,
    vehicule_id BIGINT NOT NULL,
    lieu_depart_id BIGINT,
    lieu_arrivee_id BIGINT,
    ref_depart_statut_id BIGINT NOT NULL,
    date_heure_depart TIMESTAMP NOT NULL,
    date_heure_arrivee_estimee TIMESTAMP,
    capacite_override INTEGER CHECK (capacite_override IS NULL OR capacite_override > 0),
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_depart_coop FOREIGN KEY (cooperative_id) REFERENCES cooperative(id) ON DELETE CASCADE,
    CONSTRAINT fk_depart_trajet FOREIGN KEY (trajet_id) REFERENCES trajet(id) ON DELETE CASCADE,
    CONSTRAINT fk_depart_vehicule FOREIGN KEY (vehicule_id) REFERENCES vehicule(id) ON DELETE CASCADE,
    CONSTRAINT fk_depart_lieu_depart FOREIGN KEY (lieu_depart_id) REFERENCES lieu(id),
    CONSTRAINT fk_depart_lieu_arrivee FOREIGN KEY (lieu_arrivee_id) REFERENCES lieu(id),
    CONSTRAINT fk_depart_statut FOREIGN KEY (ref_depart_statut_id) REFERENCES ref_depart_statut(id)
);

CREATE TABLE depart_tarif_siege (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    depart_id BIGINT NOT NULL,
    ref_siege_categorie_id BIGINT NOT NULL,
    ref_devise_id BIGINT NOT NULL,
    montant NUMERIC(12,2) NOT NULL CHECK (montant > 0),
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_depart_tarif_depart FOREIGN KEY (depart_id) REFERENCES depart(id) ON DELETE CASCADE,
    CONSTRAINT fk_depart_tarif_categorie FOREIGN KEY (ref_siege_categorie_id) REFERENCES ref_siege_categorie(id),
    CONSTRAINT fk_depart_tarif_devise FOREIGN KEY (ref_devise_id) REFERENCES ref_devise(id),
    CONSTRAINT uq_depart_tarif UNIQUE (depart_id, ref_siege_categorie_id)
);

CREATE TABLE depart_tarif_remise (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    depart_id BIGINT NOT NULL,
    ref_siege_categorie_id BIGINT NOT NULL,
    ref_passager_categorie_id BIGINT NOT NULL,
    type_remise VARCHAR(20) NOT NULL,
    montant NUMERIC(12,2) NOT NULL CHECK (montant >= 0),
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_depart_remise_depart FOREIGN KEY (depart_id) REFERENCES depart(id) ON DELETE CASCADE,
    CONSTRAINT fk_depart_remise_categorie FOREIGN KEY (ref_siege_categorie_id) REFERENCES ref_siege_categorie(id),
    CONSTRAINT fk_depart_remise_passager FOREIGN KEY (ref_passager_categorie_id) REFERENCES ref_passager_categorie(id),
    CONSTRAINT uq_depart_remise UNIQUE (depart_id, ref_siege_categorie_id, ref_passager_categorie_id)
);

-- ---------- Reservation, paiement, billetterie ----------
CREATE TABLE reservation (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code VARCHAR(80) NOT NULL UNIQUE,
    client_id BIGINT NOT NULL,
    depart_id BIGINT NOT NULL,
    ref_reservation_statut_id BIGINT NOT NULL,
    date_creation TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    notes TEXT,
    CONSTRAINT fk_reservation_client FOREIGN KEY (client_id) REFERENCES client(id) ON DELETE CASCADE,
    CONSTRAINT fk_reservation_depart FOREIGN KEY (depart_id) REFERENCES depart(id) ON DELETE CASCADE,
    CONSTRAINT fk_reservation_statut FOREIGN KEY (ref_reservation_statut_id) REFERENCES ref_reservation_statut(id)
);

CREATE TABLE reservation_passager (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    reservation_id BIGINT NOT NULL,
    depart_id BIGINT NOT NULL,
    nom VARCHAR(120) NOT NULL,
    prenom VARCHAR(120),
    numero_siege INTEGER NOT NULL CHECK (numero_siege > 0),
    ref_siege_categorie_id BIGINT,
    ref_passager_categorie_id BIGINT,
    ref_devise_id BIGINT,
    montant_tarif NUMERIC(12,2),
    montant_remise NUMERIC(12,2),
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_res_pass_reservation FOREIGN KEY (reservation_id) REFERENCES reservation(id) ON DELETE CASCADE,
    CONSTRAINT fk_res_pass_depart FOREIGN KEY (depart_id) REFERENCES depart(id) ON DELETE CASCADE,
    CONSTRAINT fk_res_pass_categorie FOREIGN KEY (ref_siege_categorie_id) REFERENCES ref_siege_categorie(id),
    CONSTRAINT fk_res_pass_passager FOREIGN KEY (ref_passager_categorie_id) REFERENCES ref_passager_categorie(id),
    CONSTRAINT fk_res_pass_devise FOREIGN KEY (ref_devise_id) REFERENCES ref_devise(id),
    CONSTRAINT uq_res_pass_siege UNIQUE (depart_id, numero_siege)
);

CREATE TABLE paiement (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    montant NUMERIC(12,2) NOT NULL CHECK (montant > 0),
    ref_devise_id BIGINT NOT NULL,
    ref_paiement_methode_id BIGINT NOT NULL,
    ref_paiement_statut_id BIGINT NOT NULL,
    reference_externe VARCHAR(120),
    date_paiement TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_paiement_devise FOREIGN KEY (ref_devise_id) REFERENCES ref_devise(id),
    CONSTRAINT fk_paiement_methode FOREIGN KEY (ref_paiement_methode_id) REFERENCES ref_paiement_methode(id),
    CONSTRAINT fk_paiement_statut FOREIGN KEY (ref_paiement_statut_id) REFERENCES ref_paiement_statut(id)
);

CREATE TABLE paiement_reservation (
    paiement_id BIGINT NOT NULL,
    reservation_id BIGINT NOT NULL,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    PRIMARY KEY (paiement_id, reservation_id),
    CONSTRAINT fk_paiement_res_paiement FOREIGN KEY (paiement_id) REFERENCES paiement(id) ON DELETE CASCADE,
    CONSTRAINT fk_paiement_res_reservation FOREIGN KEY (reservation_id) REFERENCES reservation(id) ON DELETE CASCADE
);

CREATE TABLE billet (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    reservation_id BIGINT NOT NULL,
    ref_billet_statut_id BIGINT NOT NULL,
    numero VARCHAR(120) NOT NULL UNIQUE,
    date_emission TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    contenu_qr TEXT,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_billet_reservation FOREIGN KEY (reservation_id) REFERENCES reservation(id) ON DELETE CASCADE,
    CONSTRAINT fk_billet_statut FOREIGN KEY (ref_billet_statut_id) REFERENCES ref_billet_statut(id)
);



-- ---------- Index utiles ----------
CREATE INDEX idx_trajet_escale_trajet ON trajet_escale(trajet_id);
CREATE INDEX idx_coop_vehicule_active ON cooperative_vehicule(cooperative_id, vehicule_id) WHERE date_fin IS NULL;
CREATE INDEX idx_chauffeur_vehicule_active ON chauffeur_vehicule(vehicule_id) WHERE date_fin IS NULL;
CREATE INDEX idx_depart_date ON depart(date_heure_depart);
CREATE INDEX idx_reservation_date ON reservation(date_creation);
CREATE INDEX idx_tarif_coop_trajet ON tarif(cooperative_id, trajet_id);

-- ---------- Triggers metier chauffeur_vehicule ----------
CREATE OR REPLACE FUNCTION fn_chauffeur_vehicule_principal_unique()
RETURNS TRIGGER AS $$
DECLARE
    role_principal_id BIGINT;
    nb_principaux INTEGER;
BEGIN
    IF NEW.date_fin IS NOT NULL THEN
        RETURN NEW;
    END IF;

    SELECT id INTO role_principal_id
    FROM ref_chauffeur_vehicule_role
    WHERE code = 'PRINCIPAL';

    IF NEW.ref_chauffeur_vehicule_role_id != role_principal_id THEN
        RETURN NEW;
    END IF;

    SELECT COUNT(*)
    INTO nb_principaux
    FROM chauffeur_vehicule
    WHERE vehicule_id = NEW.vehicule_id
      AND date_fin IS NULL
      AND ref_chauffeur_vehicule_role_id = role_principal_id
      AND NOT (chauffeur_id = NEW.chauffeur_id AND date_debut = NEW.date_debut);

    IF nb_principaux >= 1 THEN
        RAISE EXCEPTION 'Un vehicule ne peut avoir qu''un seul chauffeur PRINCIPAL actif (vehicule_id=%)', NEW.vehicule_id;
    END IF;

    RETURN NEW;
END;
$$ LANGUAGE plpgsql;

DROP TRIGGER IF EXISTS trg_chauffeur_vehicule_principal_unique ON chauffeur_vehicule;
CREATE TRIGGER trg_chauffeur_vehicule_principal_unique
BEFORE INSERT OR UPDATE ON chauffeur_vehicule
FOR EACH ROW
EXECUTE FUNCTION fn_chauffeur_vehicule_principal_unique();

CREATE OR REPLACE FUNCTION fn_chauffeur_vehicule_max2_actifs()
RETURNS TRIGGER AS $$
DECLARE
    nb_actifs INTEGER;
BEGIN
    IF NEW.date_fin IS NOT NULL THEN
        RETURN NEW;
    END IF;

    SELECT COUNT(*)
    INTO nb_actifs
    FROM chauffeur_vehicule
    WHERE vehicule_id = NEW.vehicule_id
      AND date_fin IS NULL
      AND NOT (chauffeur_id = NEW.chauffeur_id AND date_debut = NEW.date_debut);

    IF nb_actifs >= 2 THEN
        RAISE EXCEPTION 'Un vehicule ne peut pas avoir plus de 2 chauffeurs actifs (vehicule_id=%)', NEW.vehicule_id;
    END IF;

    RETURN NEW;
END;
$$ LANGUAGE plpgsql;

DROP TRIGGER IF EXISTS trg_chauffeur_vehicule_max2_actifs ON chauffeur_vehicule;
CREATE TRIGGER trg_chauffeur_vehicule_max2_actifs
BEFORE INSERT OR UPDATE ON chauffeur_vehicule
FOR EACH ROW
EXECUTE FUNCTION fn_chauffeur_vehicule_max2_actifs();

-- ---------- Donnees de base ----------
INSERT INTO ref_devise(code, libelle) VALUES
('MGA','Ariary'),
('EUR','Euro'),
('USD','Dollar US')
ON CONFLICT (code) DO NOTHING;

INSERT INTO ref_lieu_type(code, libelle) VALUES
('GARE_ROUTIERE','Gare routiere'),
('VILLE','Ville'),
('VILLAGE','Village'),
('POINT_ARRET','Point d''arret')
ON CONFLICT (code) DO NOTHING;

INSERT INTO ref_vehicule_type(code, libelle, description) VALUES
('MINIBUS','Minibus','Vehicule 12-20 places'),
('TAXI_BROUSSE','Taxi-brousse classique','Vehicule 8-12 places'),
('BUS','Bus','Vehicule 20+ places'),
('4X4','4x4','Vehicule tout-terrain')
ON CONFLICT (code) DO NOTHING;

INSERT INTO ref_vehicule_etat(code, libelle) VALUES
('ACTIF','En service'),
('EN_PANNE','En panne'),
('MAINTENANCE','En maintenance'),
('HORS_SERVICE','Hors service')
ON CONFLICT (code) DO NOTHING;

INSERT INTO ref_chauffeur_vehicule_role(code, libelle) VALUES
('PRINCIPAL','Chauffeur principal'),
('SECONDAIRE','Chauffeur secondaire')
ON CONFLICT (code) DO NOTHING;

INSERT INTO ref_type_depense(code, libelle) VALUES
('CARBURANT','Carburant'),
('REPARATION_MOTEUR','Reparation moteur'),
('REPARATION_CARROSSERIE','Reparation carrosserie'),
('PNEUS','Pneus'),
('VIDANGE','Vidange'),
('REVISION','Revision'),
('ASSURANCE','Assurance'),
('TAXE','Taxe et impots'),
('PEAGE','Peage'),
('LAVAGE','Lavage'),
('PIECES_DETACHEES','Pieces detachees'),
('ENTRETIEN','Entretien general'),
('FRAIS_DIVERS','Frais divers')
ON CONFLICT (code) DO NOTHING;

INSERT INTO ref_depart_statut(code, libelle) VALUES
('PROGRAMME','Programme'),
('EN_COURS','En cours'),
('TERMINE','Termine'),
('ANNULE','Annule'),
('RETARDE','Retarde')
ON CONFLICT (code) DO NOTHING;

INSERT INTO ref_reservation_statut(code, libelle) VALUES
('BROUILLON','Brouillon'),
('CONFIRMEE','Confirmee'),
('ANNULEE','Annulee'),
('EXPIREE','Expiree')
ON CONFLICT (code) DO NOTHING;

INSERT INTO ref_paiement_methode(code, libelle) VALUES
('ESPECES','Especes'),
('MVOLA','MVola'),
('ORANGE_MONEY','Orange Money'),
('AIRTEL_MONEY','Airtel Money'),
('CARTE','Carte bancaire'),
('VIREMENT','Virement bancaire')
ON CONFLICT (code) DO NOTHING;

INSERT INTO ref_paiement_statut(code, libelle) VALUES
('EN_ATTENTE','En attente'),
('VALIDE','Valide'),
('ECHOUE','Echoue'),
('REMBOURSE','Rembourse'),
('PARTIEL','Partiel')
ON CONFLICT (code) DO NOTHING;

INSERT INTO ref_billet_statut(code, libelle) VALUES
('EMIS','Emis'),
('UTILISE','Utilise'),
('ANNULE','Annule'),
('EXPIRE','Expire')
ON CONFLICT (code) DO NOTHING;

COMMIT;
